tests/invalid/invalid-026.inox
Module Invalid

Main() :
    if True :
        Exit
    ;
;
